--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@ body {
 }
 
 img {
-    width: auto;
-    height: 100%;
+    width: 100%;
+    height: auto;
 }
 
 .main__container {
@@ -18,7 +18,7 @@ img {
 .cat__container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .buttons__container {
@@ -26,4 +26,14 @@ img {
     flex-direction: row;
     justify-content: space-around;
     margin-top: 50px;
+}
+
+.cat__inner__container {
+	display: flex;
+	flex-direction: column;
+}
+
+.catText {
+	display: flex;
+	padding: 20px;
 }
